--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -5,3 +5,10 @@
   box-shadow: 4px 4px 6px rgba(0,0,0,0.05);
   margin-bottom: 20px;
 }
+
+.welcome-message {
+  font-size: 1.5em;
+  font-weight: 300;
+  margin-bottom: 20px;
+  text-align: center;
+}
