--- a/src/components/ExcuseList.css
+++ b/src/components/ExcuseList.css
@@ -1,6 +1,11 @@
-.card-grid {
+/* .card-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
   grid-gap: 16px;
+} */
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
 }
