--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,41 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  display: flex;
+  margin: 0 auto 60px;
+  gap: 10px;
+  align-items: center;
+}
+
+nav h1 {
+  margin-right: auto;
+}
+
+nav a {
+  color: #333;
+  padding: 4px 10px;
+}
+
+nav a.active {
+  color: #fff;
+  background: #333;
+  text-decoration: none;
+}
+
+img {
+  width: 500px;
+  height: 300px;
+}
+
+.page {
+  max-width: 960px;
+  margin: 15px auto;
+}
+
+@media screen and (max-width: 480px) {
+  .page {
+    /* Set margin for screens smaller than 480px */
+    margin: 0 25px;
+  }
 }
